# stdCellGen

./: .gitignore  CMakeLists.txt  README.md  find_split_cells.py  orient_sd.py  专业实践.txt  专业实践_修订版.txt
apps/: fold_dump.cpp  stdcellgen.cpp  stdcellgen.cpp.bak
data/: AsAp7.cells  AsAp7.sp  asap7.config  asap7_oriented.config  demo.config  inv.cell  tech.demo.cfg
docs/: PROJECT_OVERVIEW.md
include/stdcell/: core.hpp  folding.hpp  io.hpp  matchdata.hpp  matcher.hpp  placer.hpp  router.hpp  structural_matcher.hpp  structural_matcher.hpp.bak  structural_matcher.hpp.bak2
python/rl_placer/: main.py
scripts/: build.ps1  run_demo.ps1
src/core/: core.cpp
src/io/: io.cpp
src/matcher/: matchdata.cpp  matcher.cpp  structural_matcher.cpp  structural_matcher.cpp.bak
src/placer/: folding.cpp  placer.cpp
src/router/: router.cpp
